templates/kustomize/cluckin-bell-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluckin-bell-app
  labels:
    app: cluckin-bell-app
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: cluckin-bell-app
